Changed composer name to netric/netric-sdk-php for composer

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "netric-sdk-php",
+  "name": "netric/netric-sdk-php",
   "description": "Netric PHP SDK",
   "license": "Commercial",
   "homepage": "http://www.netric.com/",
