--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "netric/netric-sdk-php",
   "description": "Netric PHP SDK",
   "license": "Commercial",
+  "version": "2.0.1",
   "homepage": "http://www.netric.com/",
   "autoload": {
       "psr-4": {"NetricSDK\\": "src/NetricSDK"}
