Changed name to netric/sdk-php

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "netric/netric-sdk-php",
+  "name": "netric/sdk-php",
   "description": "Netric PHP SDK",
   "license": "Commercial",
   "version": "2.0.1",
