Added docker compose and Memcached datamapper

--- a/Dockerfile.php71
+++ b/Dockerfile.php71
@@ -8,6 +8,7 @@ RUN apt-get update && apt-get install -y \
         libjpeg62-turbo-dev \
         libmcrypt-dev \
         libpng12-dev \
+        libmemcached-dev \
 		libz-dev \
 		libpq-dev \
 		libxml2-dev \
@@ -16,6 +17,8 @@ RUN apt-get update && apt-get install -y \
 		git \
 		curl \
     && docker-php-ext-install -j$(nproc) iconv mcrypt \
+    && pecl install memcached \
+    && docker-php-ext-enable memcached \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install -j$(nproc) gd \
     && pecl install xdebug \
